implementing (test) banner & interstitial ads

--- a/app/src/main/res/layout/fragment_new_estimate.xml
+++ b/app/src/main/res/layout/fragment_new_estimate.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context=".feature_main.presentation.new_estimate.NewEstimateFragment">
 
     <androidx.appcompat.widget.Toolbar
@@ -14,115 +13,124 @@
         android:background="@color/design_default_color_primary"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-        app:title="@null" />
+        app:title="@null"
+        android:layout_alignParentTop="true"/>
 
-    <ScrollView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1">
+        android:layout_height="match_parent"
+        android:layout_below="@id/mainToolBar"
+        android:orientation="vertical">
 
-        <LinearLayout
-            android:orientation="vertical"
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:id="@+id/tv_invoice_types"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="20sp"
-                android:textStyle="bold"
-                android:textColor="@android:color/holo_blue_dark"
-                android:padding="16dp"
-                tools:text="Estimate"/>
+            android:layout_height="0dp"
+            android:layout_weight="1">
 
             <LinearLayout
-                android:orientation="horizontal"
+                android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
                 <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:padding="16dp"
+                    android:id="@+id/tv_invoice_types"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:textSize="20sp"
-                    android:textAllCaps="true"
                     android:textStyle="bold"
-                    android:text="@string/client"/>
-
-                <TextView
-                    android:id="@+id/tv_client_name"
-                    android:layout_width="0dp"
-                    android:layout_weight="1"
-                    android:layout_height="match_parent"
-                    android:padding="16dp"
-                    android:textSize="20sp"
-                    tools:text="John Wick"/>
-
-                <TextView
-                    android:id="@+id/tv_view_client"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:padding="16dp"
-                    android:textSize="20sp"
                     android:textColor="@android:color/holo_blue_dark"
-                    android:text="@string/view"/>
+                    android:padding="16dp"
+                    tools:text="Estimate"/>
 
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:padding="16dp"
+                        android:textSize="20sp"
+                        android:textAllCaps="true"
+                        android:textStyle="bold"
+                        android:text="@string/client"/>
+
+                    <TextView
+                        android:id="@+id/tv_client_name"
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:layout_height="match_parent"
+                        android:padding="16dp"
+                        android:textSize="20sp"
+                        tools:text="John Wick"/>
+
+                    <TextView
+                        android:id="@+id/tv_view_client"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:padding="16dp"
+                        android:textSize="20sp"
+                        android:textColor="@android:color/holo_blue_dark"
+                        android:text="@string/view"/>
+
+
+                </LinearLayout>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:padding="20dp"
+                    android:text="@string/items"
+                    android:textSize="20sp"
+                    android:textStyle="italic|bold" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/list_item"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:minHeight="100dp"
+                    tools:itemCount="5"
+                    tools:listitem="@layout/adapter_new_estimate" />
+
+                <Button
+                    android:id="@+id/add_items"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:text="@string/add_items"
+                    android:textAllCaps="false" />
 
             </LinearLayout>
 
+        </ScrollView>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
             <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:padding="20dp"
-                android:text="@string/items"
-                android:textSize="20sp"
-                android:textStyle="italic|bold" />
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/list_item"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:minHeight="100dp"
-                tools:itemCount="5"
-                tools:listitem="@layout/adapter_new_estimate" />
-
-            <Button
-                android:id="@+id/add_items"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:text="@string/add_items"
-                android:textAllCaps="false" />
+                android:padding="16dp"
+                android:text="@string/total"
+                android:textSize="20sp"
+                android:textStyle="italic" />
+
+            <TextView
+                android:id="@+id/items_total"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="end"
+                android:padding="16dp"
+                android:textSize="16sp"
+                tools:text="200" />
+
 
         </LinearLayout>
 
-    </ScrollView>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="16dp"
-            android:text="@string/total"
-            android:textSize="20sp"
-            android:textStyle="italic" />
-
-        <TextView
-            android:id="@+id/items_total"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="end"
-            android:padding="16dp"
-            android:textSize="16sp"
-            tools:text="200" />
-
-
     </LinearLayout>
 
-</LinearLayout>
+</RelativeLayout>
