--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,6 +24,8 @@
         app:adSize="BANNER"
         app:adUnitId="@string/ad_mob_banner_test" />
 
+    <!--TODO replace with production ID-->
+
 </LinearLayout>
 
 
