--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,9 +22,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:adSize="BANNER"
-        app:adUnitId="@string/ad_mob_banner_test" />
+        app:adUnitId="@string/ad_mob_banner" />
 
-    <!--TODO replace with production ID-->
+    <!--TODO replace with ad_mob_banner-->
 
 </LinearLayout>
 
