--- a/app/src/main/res/layout/fragment_reports_main.xml
+++ b/app/src/main/res/layout/fragment_reports_main.xml
@@ -111,7 +111,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:visibility="gone"
+                android:visibility="visible"
                 android:layout_marginTop="50dp"
                 android:text="@string/open_report_as_excel" />
 
