--- a/app/src/main/res/layout/adapter_new_estimate.xml
+++ b/app/src/main/res/layout/adapter_new_estimate.xml
@@ -1,84 +1,102 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="horizontal"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:gravity="center_vertical">
+    android:gravity="center_vertical"
+    android:orientation="vertical">
 
-    <Button
-        android:id="@+id/item_remove"
-        android:background="@drawable/close"
-        android:layout_gravity="center_vertical"
-        android:layout_width="35dp"
-        android:layout_height="35dp"/>
 
     <TextView
         android:id="@+id/item_name"
-        android:layout_width="0dp"
-        android:layout_weight="1"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="16dp"
-        tools:text="1 mm"
-        />
+        android:gravity="start"
+        android:paddingEnd="16dp"
+        android:paddingStart="16dp"
+        android:textSize="15sp"
+        android:paddingTop="16dp"
+        tools:text="1 mm" />
 
-    <TextView
-        android:id="@+id/item_unit_price"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="16dp"
-        tools:text="200"
-        />
 
     <LinearLayout
-        android:id="@+id/ViewL0"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center_vertical">
 
-        <EditText
-            android:id="@+id/etQty"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:minWidth="40dp"
-            android:minHeight="40dp"
-            android:maxWidth="50dp"
-            android:hint="@string/qty"
-            android:gravity="center_horizontal"
-            android:textColor="@android:color/black"
-            android:inputType="numberDecimal"
-            android:layout_margin="5dp"
+        <Button
+            android:id="@+id/item_remove"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
             android:layout_gravity="center_vertical"
-            android:importantForAutofill="no"
-            tools:ignore="LabelFor" />
+            android:background="@drawable/close" />
+
+        <TextView
+            android:id="@+id/item_unit_price"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:gravity="center_horizontal"
+            android:padding="16dp"
+            tools:text="200" />
 
         <LinearLayout
+            android:id="@+id/container"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="horizontal">
 
-            <Button
-                android:id="@+id/plus"
-                android:layout_width="35dp"
-                android:layout_height="35dp"
-                android:layout_marginEnd="10dp"
-                android:background="@drawable/up"/>
+            <EditText
+                android:id="@+id/etQty"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_margin="5dp"
+                android:gravity="center_horizontal"
+                android:hint="@string/qty"
+                android:importantForAutofill="no"
+                android:inputType="numberDecimal"
+                android:maxWidth="50dp"
+                android:minWidth="70dp"
+                android:minHeight="40dp"
+                android:textColor="@android:color/black"
+                tools:ignore="LabelFor" />
 
-            <Button
-                android:id="@+id/minus"
-                android:layout_width="35dp"
-                android:layout_height="35dp"
-                android:background="@drawable/down" />
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:orientation="vertical">
+
+                <Button
+                    android:id="@+id/plus"
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
+                    android:layout_marginEnd="10dp"
+                    android:background="@drawable/up" />
+
+                <Button
+                    android:id="@+id/minus"
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
+                    android:background="@drawable/down" />
+
+            </LinearLayout>
 
         </LinearLayout>
 
+        <TextView
+            android:id="@+id/item_total"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:padding="16dp"
+            android:gravity="end"
+            tools:text="2000" />
+
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/item_total"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="16dp"
-        tools:text="2000"
-        />
 
 </LinearLayout>
