--- a/app/src/main/res/layout/fragment_subscribe.xml
+++ b/app/src/main/res/layout/fragment_subscribe.xml
@@ -52,13 +52,14 @@
         </LinearLayout>
 
         <LinearLayout
-            android:orientation="vertical"
+            android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="match_parent"
                 android:text="@string/monthly_features"
                 />
 
@@ -66,7 +67,6 @@
                 android:id="@+id/btn_monthly_subscription"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="bottom|end"
                 android:text="@string/subscribe" />
 
         </LinearLayout>
@@ -109,12 +109,13 @@
         </LinearLayout>
 
         <LinearLayout
-            android:orientation="vertical"
+            android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <TextView
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
+                android:layout_weight="1"
                 android:layout_height="match_parent"
                 android:text="@string/yearly_features"
                 />
@@ -123,7 +124,6 @@
                 android:id="@+id/btn_yearly_subscription"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="bottom|end"
                 android:text="@string/subscribe" />
 
         </LinearLayout>
