can copy (one item a time) & apply discount (to single or multiple items) the functionality of discount is controlled by variable SPECIAL in Constants.kt
(still testing)

--- a/app/src/main/res/menu/select_items_options.xml
+++ b/app/src/main/res/menu/select_items_options.xml
@@ -14,6 +14,12 @@
         android:title="@string/delete"
         app:showAsAction="ifRoom" />
 
+    <item
+        android:id="@+id/copy"
+        android:icon="@drawable/copy"
+        android:title="@string/copy"
+        app:showAsAction="ifRoom" />
+
 
     <item
         android:id="@+id/selectAll"
