--- a/app/src/main/res/layout/fragment_new_estimate.xml
+++ b/app/src/main/res/layout/fragment_new_estimate.xml
@@ -89,7 +89,8 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/list_item"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="0dp"
+                    android:layout_weight="0.8"
                     android:minHeight="100dp"
                     tools:itemCount="5"
                     tools:listitem="@layout/adapter_new_estimate" />
