import items here feature still in testing mode

--- a/app/src/main/res/menu/main_page_options.xml
+++ b/app/src/main/res/menu/main_page_options.xml
@@ -18,5 +18,10 @@
         android:title="@string/new_estimate"
         app:showAsAction="never" />
 
+    <item
+        android:id="@+id/import_here"
+        android:title="@string/import_here"
+        app:showAsAction="never" />
+
 
 </menu>
