--- a/app/src/main/res/layout/adapter_invoice_items_view.xml
+++ b/app/src/main/res/layout/adapter_invoice_items_view.xml
@@ -3,36 +3,70 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:gravity="center_vertical">
 
     <TextView
         android:id="@+id/item_name"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:padding="16dp"
+        android:paddingTop="16dp"
+        android:paddingBottom="4dp"
+        android:paddingEnd="16dp"
+        android:paddingStart="16dp"
+        android:textSize="16sp"
         tools:text="1 mm" />
 
-    <TextView
-        android:id="@+id/item_unit_price"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="16dp"
-        tools:text="200" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+
+        <TextView
+            android:id="@+id/item_unit_price"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingTop="4dp"
+            android:paddingBottom="4dp"
+            android:paddingEnd="16dp"
+            android:paddingStart="16dp"
+            tools:text="200" />
+
+        <TextView
+            android:id="@+id/item_qty"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:paddingTop="4dp"
+            android:paddingBottom="4dp"
+            android:paddingEnd="16dp"
+            android:paddingStart="16dp"
+            android:gravity="center_horizontal"
+            tools:text="10" />
+
+        <TextView
+            android:id="@+id/item_total"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingTop="4dp"
+            android:paddingBottom="4dp"
+            android:paddingEnd="16dp"
+            android:paddingStart="16dp"
+            tools:text="2000" />
+
+    </LinearLayout>
 
     <TextView
-        android:id="@+id/item_qty"
-        android:layout_width="wrap_content"
+        android:id="@+id/item_discount"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="16dp"
-        tools:text="10" />
-
-    <TextView
-        android:id="@+id/item_total"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="16dp"
-        tools:text="2000" />
+        android:paddingTop="0dp"
+        android:paddingBottom="4dp"
+        android:paddingEnd="16dp"
+        android:paddingStart="16dp"
+        android:textSize="10sp"
+        tools:text="(2222 - 53%)"
+        tools:ignore="SmallSp" />
 
 </LinearLayout>
