--- a/app/src/main/res/layout/adapter_invoice_view.xml
+++ b/app/src/main/res/layout/adapter_invoice_view.xml
@@ -28,6 +28,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="16dp"
+            android:textSize="18sp"
             tools:text="Estimate" />
 
         <TextView
@@ -45,6 +46,7 @@
         android:id="@+id/tv_client_name"
         android:padding="16dp"
         tools:text="John Wick"
+        android:textSize="20sp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
