--- a/app/src/main/res/layout/adapter_new_estimate.xml
+++ b/app/src/main/res/layout/adapter_new_estimate.xml
@@ -98,5 +98,15 @@
 
     </LinearLayout>
 
+    <TextView
+        android:id="@+id/item_discount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="start"
+        android:paddingEnd="16dp"
+        android:paddingStart="16dp"
+        android:textSize="12sp"
+        tools:text="(2654 - 53%)" />
+
 
 </LinearLayout>
