--- a/app/src/main/res/layout/fragment_define_me.xml
+++ b/app/src/main/res/layout/fragment_define_me.xml
@@ -33,7 +33,7 @@
                 android:orientation="vertical">
 
                 <com.google.android.material.textfield.TextInputLayout
-                    android:id="@+id/et_client_name"
+                    android:id="@+id/et_device_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
@@ -152,6 +152,7 @@
                     android:text="@string/your_role"/>
 
                 <RadioGroup
+                    android:id="@+id/radio"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
