--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -71,6 +71,9 @@
         <action
             android:id="@+id/action_navigation_settings_to_reportsMainFragment"
             app:destination="@id/reportsMainFragment" />
+        <action
+            android:id="@+id/action_navigation_settings_to_defineMeFragment"
+            app:destination="@id/defineMeFragment" />
     </fragment>
 
 
@@ -267,5 +270,10 @@
         android:name="com.android_a865.estimatescalculator.feature_in_app.presentation.main.SubscribeFragment"
         android:label="@string/subscribe"
         tools:layout="@layout/fragment_subscribe" />
+    <fragment
+        android:id="@+id/defineMeFragment"
+        android:name="com.android_a865.estimatescalculator.feature_network.start.DefineMeFragment"
+        android:label="fragment_define_me"
+        tools:layout="@layout/fragment_define_me" />
 
 </navigation>
